
Enhancements
 * New database-driven custom VLAN assignment strategy example
 * Slightly more helpful installer.pl
 * Added a virtual IP (vip) parameter for interfaces in configuration which overrides auto-detection (#1396)
 * More logging
 * Daemon startup time logged. Allows for easier troubleshooting of slow-to-restart setups.

Bug Fixes
 * Proxy Bypass issues in environment with Virtual IP (#1385)
 * Cisco 2950 802.1X Reauthenticate without VoIP issue (#1388)
 * CoA RADIUS secret is lower cased (#1392)
 * Username length on the Web Admin is no longer limited to 15 characters
 * Potential (not-validated) cross-site scripting (XSS) in captive portal
 * Mandatory MAC lookup in the self-registered guests pages
 * Cancel button problems on SMS confirmation page (#1393)
 * Documented the fact that you need to configure credentials in packetfence-soh.pm for Statement of Health (SoH) support

Translations
 * Updated Brazilian Portuguese (pt_BR) translation (Thanks to Diego de Souza Lopes)

--------------------------------------------------------------------------------
Version 3.2.0 released on 2012-02-22

Security
 * Reflected Cross-site scripting (XSS) in Web Admin printing system (#1362)

New Hardware Support
 * Ruckus Wireless Controllers

New Features
 * OpenVAS Vulnerability Assesment integration for client-side policy compliance
 * Bandwidth violations based on RADIUS accounting information
 * Billing engine integration for allowing the use of a payment gateway to gain network access.

Enhancements
 * Migrated our documentation from a binary-only ODT to a flexible asciidoc format
 * Code and tests refactoring
 * Minor documentation update for Aruba Controllers
 * Performance: avoiding some redundant operations on startup
 * A DHCP listener will run by default on the management interface 
 * pfcmd_vlan is now able to run arbitrary methods on network devices
 * Debug statement with the resolved SSID now available to troubleshoot SSID problems live